# memes_service

./: .dockerignore  .flake8  .gitignore  README.md  alembic.ini  pyproject.toml  supervisord.conf
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
memes_service/: __init__.py  __main__.py  config.py  conftest.py  logger.py  settings.py  worker.py
memes_service/db/: base.py  dependencies.py  utils.py
memes_service/db/dao/: memes_dao.py  reactions_dao.py  users_dao.py
memes_service/db/migrations/: env.py
memes_service/db/migrations/versions/: 2022-11-17-00-32_93aa3f24a25d.py  2022-11-20-14-10_165e51b4f127.py
memes_service/db/models/: __init__.py  memes.py  reactions.py  users.py
memes_service/services/: __init__.py  approximate_nearest_neighbors_service.py  clip_service_client.py  lifetime.py  meme_service.py  queue_service.py  reaction.py  recomendation_module.py  storage_service.py  telegram_parser_service.py  user_service.py
memes_service/services/redis/: dependency.py  lifetime.py
memes_service/tests/: __init__.py
memes_service/web/: __init__.py  application.py  lifetime.py  middleware.py
memes_service/web/api/: __init__.py  router.py
memes_service/web/api/echo/: __init__.py  views.py
memes_service/web/api/memes_controller/: __init__.py  schema.py  views.py
memes_service/web/api/monitoring/: __init__.py
memes_service/web/api/reactions/: __init__.py  schema.py  views.py
